update addMessage Function with userModel && add VerifyEmail with it's all logic related(SignUp-SignIn).

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 SALT_ROUNDS = 8
 SECRET_KEY = SARAHA-APP
+EMAIL=ehabtarek144@gmail.com
+PASSWORD = kukltrorfcfmkgab
+VERIFY_SECRET = SARAHA_VIRIFY_EMAIL
